ide:chore: refactor VirtualMachineRunnerImpl and add several unit tests
Signed-off-by: Vitaliy Dragun <vdrag00n90@gmail.com>